--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,14 +14,29 @@ theme:
     - search.highlight
     - toc.follow
 
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.blocks.caption
+  - toc:
+      permalink: true
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - attr_list
+  - md_in_html
+  - pymdownx.tabbed:
+      alternate_style: true
+
 plugins:
-  - blog
+  - d2
+  - blog:
+      blog_dir: .
   - search
   - git-committers:
       repository: RDMA-Rust/rdma-rust.github.io
       branch: main
-
-nav:
-  - Home: index.md
-  - Blog:
-    - blog/index.md
