docs(blog): add "Why another RDMA wrapper"
Signed-off-by: Luke Yue <lukedyue@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,22 @@ theme:
     - search.highlight
     - toc.follow
 
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.blocks.caption
+  - toc:
+      permalink: true
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - attr_list
+  - md_in_html
+  - pymdownx.tabbed:
+      alternate_style: true
+
 plugins:
+  - d2
   - blog
   - search
   - git-committers:
